Apply CSP, prevent-editing, responsive and backend updates

--- a/phonebook.html
+++ b/phonebook.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:; script-src 'self' https:; connect-src 'self' https:; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https:; object-src 'none'; frame-ancestors 'none';">
+    <meta name="description" content="Phonebook — EvePlan Events">
     <title>Phonebook — EvePlan</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -32,5 +36,8 @@
 </div>
 
 <footer>© 2026 EvePlan Events</footer>
+<script src="prevent-editing.js"></script>
+<script src="responsive-adaptive.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
