--- a/services.html
+++ b/services.html
@@ -2,29 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:; script-src 'self' https:; connect-src 'self' https:; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https:; object-src 'none'; frame-ancestors 'none';">
+    <meta name="description" content="Services & FAQs - EvePlan Events">
     <title>Services & FAQs</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="services.css">
 </head>
 <body>
 
-    <!-- HERO SECTION -->
-    <header class="hero">
-        <nav class="navbar">
-            <h1 class="logo">EvePlan.com</h1>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="services.html" class="active">Services & FAQ</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="biodata.html">Biodata Form</a></li>
-            </ul>
-        </nav>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About Us</a>
+    <a href="services.html">Services & FAQs</a>
+    <a href="contact.html">Contact</a>
+    <a href="biodata.html">Bio‑Data</a>
+</nav>
 
-        <div class="hero-text">
-            <h2>Our Services</h2>
-            <p>Making every event memorable and stress-free</p>
-        </div>
-    </header>
+<div class="hero">
+    <h2>Our Services</h2>
+    <p>Making every event memorable and stress-free</p>
+</div>
 
     <!-- SERVICES -->
     <section class="content-container">
@@ -102,5 +100,8 @@
         </div>
     </section>
 
+<script src="prevent-editing.js"></script>
+<script src="responsive-adaptive.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
