Add unique CEO profile card with image, skills tags, and professional styling

--- a/about.html
+++ b/about.html
@@ -21,9 +21,20 @@
     <h2>About the Company</h2>
     <p>We are a full‑service event planning company dedicated to creating elegant and memorable events tailored to our clients’ needs.</p>
 
-    <div class="card">
-        <h3>CEO – Onuoha Ikechukwu David</h3>
-        <p>Founder and CEO with a strong passion for creativity and coding. Supervises every code implementation.</p>
+    <div class="ceo-card">
+        <div class="ceo-image-wrapper">
+            <img src="./images/dave.jpeg" alt="CEO Onuoha Ikechukwu David" class="ceo-image">
+        </div>
+        <div class="ceo-content">
+            <h3>CEO – Onuoha Ikechukwu David</h3>
+            <p class="ceo-title">Founder & Chief Executive Officer</p>
+            <p>Founder and CEO with a strong passion for creativity and coding. Supervises every code implementation and drives the vision of EvePlan Events to create memorable experiences.</p>
+            <div class="ceo-skills">
+                <span class="skill-tag">Event Planning</span>
+                <span class="skill-tag">Full-Stack Development</span>
+                <span class="skill-tag">Leadership</span>
+            </div>
+        </div>
     </div>
 
     <div class="card">
