Fix image error in about section: correct image path, improve alt text, and increase CEO circle size from 240px to 300px

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 
     <div class="ceo-card">
         <div class="ceo-image-wrapper">
-            <img src="./images/david.jpeg" alt="CEO Onuoha Ikechukwu David" class="ceo-image">
+            <img src="./images/david .jpg" alt="CEO Onuoha Ikechukwu David" class="ceo-image">
         </div>
         <div class="ceo-content">
             <h3>CEO – Onuoha Ikechukwu David</h3>
