Add Operations Manager section with matching CEO card layout, styling, and professional photo (toyin.jpg)

--- a/about.html
+++ b/about.html
@@ -37,9 +37,20 @@
         </div>
     </div>
 
-    <div class="card">
-        <h3>Operations Manager – Oriretan Damilola Toyin</h3>
-        <p>Manages daily operations, research, marketing, and ensures smooth event execution.</p>
+    <div class="ceo-card">
+        <div class="ceo-image-wrapper">
+            <img src="./images/toyin.jpg" alt="Operations Manager Oriretan Damilola Toyin" class="ceo-image">
+        </div>
+        <div class="ceo-content">
+            <h3>Operations Manager – Oriretan Damilola Toyin</h3>
+            <p class="ceo-title">Operations & Marketing Manager</p>
+            <p>Operations Manager with expertise in daily operations, research, and strategic marketing. Ensures smooth event execution and maintains excellence in every project delivery.</p>
+            <div class="ceo-skills">
+                <span class="skill-tag">Event Operations</span>
+                <span class="skill-tag">Marketing Strategy</span>
+                <span class="skill-tag">Research & Analysis</span>
+            </div>
+        </div>
     </div>
 </div>
 
